--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <router-outlet></router-outlet>
     </main>
   </div>
-  <div class="container p-0 mw-100 footer">
+  <div class="container p-0 mw-100 footer bg-dark text-light">
     <app-footer></app-footer>
   </div>
 </div>
