--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<!--<div class="text-center mx-auto hero">-->
+<!--  <div class="hero-content">-->
+<!--    <h1 class="text-primary">Welcome to Shattered Realms</h1>-->
+<!--    <p class="text-light">-->
+<!--      <span class="btn btn-outline-primary">Sign Up</span> for a free account to get started playing!-->
+<!--    </p>-->
+<!--  </div>-->
+<!--</div>-->
+
+<div class="row justif-content-center">
+  <div class="col-md-6 col-sm-12 hero">
+    <img src="/assets/images/CrouchingCharacter.png" alt="Shattered Realms Character" />
+  </div>
+  <div class="col-md-6 col-sm-12 my-auto text-center">
+    <div class="hero-content">
+      <h1 class="text-primary">Welcome to<br/> Shattered Realms Online</h1>
+      <p class="text-light">
+        <span class="btn btn-outline-secondary">Sign Up</span> for a free account to get started playing!
+      </p>
+    </div>
+  </div>
+</div>
+
