--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
+@import 'variables';
 @import '~bootstrap/scss/bootstrap';
+
+body {
+  background-color: $dark;
+}
