--- a/src/app/_components/footer/footer.component.html
+++ b/src/app/_components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="container py-5">
-  <div class="row justify-content-center">
+  <div class="row justify-content-center text-center">
     <div class="col-12 col-sm">
-      <img src="/assets/logos/BlackLogo.svg" class="footer-logo" />
+      <img src="/assets/logos/WhiteLogo.svg" class="footer-logo" />
       <small class="d-block mb-3 text-muted">&copy; 2021-2022</small>
     </div>
     <div class="col-12 col-sm">
