--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,4 @@
-<!--<div class="text-center mx-auto hero">-->
-<!--  <div class="hero-content">-->
-<!--    <h1 class="text-primary">Welcome to Shattered Realms</h1>-->
-<!--    <p class="text-light">-->
-<!--      <span class="btn btn-outline-primary">Sign Up</span> for a free account to get started playing!-->
-<!--    </p>-->
-<!--  </div>-->
-<!--</div>-->
-
-<div class="row justif-content-center">
+<div class="row justify-content-center">
   <div class="col-md-6 col-sm-12 hero">
     <img src="/assets/images/CrouchingCharacter.png" alt="Shattered Realms Character" />
   </div>
@@ -20,4 +11,3 @@
     </div>
   </div>
 </div>
-
