--- a/src/app/_components/nav/nav.component.html
+++ b/src/app/_components/nav/nav.component.html
@@ -1,15 +1,28 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand text-primary" [routerLink]="'.'">Shattered Realms</a>
-
-    <button class="navbar-toggler float-right" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
-      &#9776;
+    <a class="navbar-brand text-primary" href="#">Shattered Realms</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      (click)="togglerSecondExample.toggle()"
+      aria-controls="navbarTogglerDemo02"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <i class="fas fa-bars"></i>
     </button>
-
-    <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse">
-      <ul ngbNav [activeId]="route.url | async" class="navbar-nav">
-        <li [ngbNavItem]="link.link" *ngFor="let link of links">
-          <a ngbNavLink [routerLink]="link.link">{{link.title}}</a>
+    <div
+      class="collapse navbar-collapse"
+      id="navbarTogglerDemo02"
+      mdbCollapse
+      #togglerSecondExample="mdbCollapse"
+    >
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
         </li>
       </ul>
     </div>
