--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,8 +1,7 @@
-@import "~src/styles";
-
-.hero {
-  max-height: 100%;
-}
+@import '~src/variables';
+@import '~node_modules/mdb-angular-ui-kit/assets/scss/bootstrap/functions';
+@import '~node_modules/mdb-angular-ui-kit/assets/scss/bootstrap/variables';
+@import '~node_modules/mdb-angular-ui-kit/assets/scss/bootstrap/mixins';
 
 @include media-breakpoint-up(md) {
   .hero > img {
@@ -17,6 +16,7 @@
     transform: translateX(-15%);
   }
 }
+
 
 @include media-breakpoint-down(sm) {
   .hero > img {
