Added more to the home page

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,28 @@
-<div class="row justify-content-center">
-  <div class="col-md-6 col-sm-12 hero">
-    <img src="/assets/images/CrouchingCharacter.png" alt="Shattered Realms Character" />
-  </div>
-  <div class="col-md-6 col-sm-12 my-auto text-center">
-    <div class="hero-content">
-      <h1 class="text-primary">Welcome to<br/> Shattered Realms Online</h1>
-      <p class="text-light">
-        <span class="btn btn-outline-secondary">Sign Up</span> for a free account to get started playing!
+<section class="hero container">
+ <div class="row justify-content-center">
+   <div class="col-md-6 col-sm-12 hero-image">
+     <img src="/assets/images/CrouchingCharacter.png" alt="Shattered Realms Character" />
+   </div>
+   <div class="col-md-6 col-sm-12 my-auto text-center hero-content">
+     <h1 class="text-primary">Welcome to<br/> Shattered Realms Online</h1>
+     <p class="text-light">
+       <span class="btn btn-outline-secondary">Sign Up</span> for a free account to get started playing!
+     </p>
+   </div>
+ </div>
+</section>
+<section class="features container pt-5">
+  <div class="d-flex justify-content-center">
+    <div class="text-center">
+      <h3 class="text-uppercase fw-bold mb-4">
+        ABOUT THE GAME
+      </h3>
+      <p class="text-muted">
+        <span class="text-secondary">Release Date: </span> TBD
+        <span class="text-secondary">Genre: </span> MMORPG
+        <span class="text-secondary">Platform: </span> Windows, Mac, & Linux
+        <span class="text-secondary">Developer: </span> Forever Dev
       </p>
     </div>
   </div>
-</div>
+</section>
