Refactored nav to add register and download buttons

--- a/src/app/_components/nav/nav.component.html
+++ b/src/app/_components/nav/nav.component.html
@@ -21,8 +21,16 @@
         <li class="nav-item">
           <a class="nav-link" href="/">Home</a>
         </li>
-        <li class="nav-item">
+      </ul>
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+        <li class="nav-item text-center">
           <a class="nav-link" href="/login">Login</a>
+        </li>
+        <li class="nav-item text-center">
+          <a class="nav-link" href="#">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link btn btn-primary text-dark" href="#">Download</a>
         </li>
       </ul>
     </div>
