Added login form

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,8 +5,9 @@ $info: #8afff2;
 $warning: #da0a3b;
 $danger: #910d2e;
 $light: #F6F7F8;
-$dark: #0F0F0F;
-$light-dark: #011627;
+$semi-dark: #3F3F3F;
+$dark: #282828;
+$dark-highlight: #011627;
 
 $theme-colors: (
   "primary": $primary,
@@ -16,6 +17,7 @@ $theme-colors: (
   "warning": $warning,
   "danger": $danger,
   "light": $light,
+  "semi-dark": $semi-dark,
   "dark": $dark,
-  "light-dark": $light-dark,
+  "dark-highlight": $dark-highlight,
 )
