--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,12 @@
 
 @import '~mdb-angular-ui-kit/assets/scss/mdb.scss';
 
-body {
+html,body
+{
   background-color: $dark;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
