Upgraded alerts to allow for multiple services and multiple messages to be shown at a time.

--- a/src/app/_components/alert/alert.component.html
+++ b/src/app/_components/alert/alert.component.html
@@ -1,1 +1,6 @@
-<div *ngIf="message" [ngClass]="message.cssClass">{{message.text}}</div>
+<div class="mt-4 px-4">
+  <div role="alert" *ngFor="let alert of alerts" class="{{cssClass(alert)}}" style="position: relative">
+    <a type="button" class="close" aria-label="Close" (click)="removeAlert(alert)"><span aria-hidden="true">&times;</span></a>
+    {{alert.message}}
+  </div>
+</div>
