--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,6 @@
 $primary: #66D0FF;
 $secondary: #F43838;
-$success: #2EC4B6;
+$success: #2ec46f;
 $info: #8afff2;
 $warning: #da0a3b;
 $danger: #910d2e;
@@ -20,4 +20,5 @@ $theme-colors: (
   "semi-dark": $semi-dark,
   "dark": $dark,
   "dark-highlight": $dark-highlight,
-)
+);
+
