--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -25,7 +25,10 @@
           </div>
         </div>
 
-        <button type="submit" class="btn btn-primary btn-block" (click)="onLogin()">Login</button>
+        <button type="submit" class="btn btn-primary btn-block" (click)="onLogin()" [disabled]="loading">
+          <span *ngIf="loading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+          <span *ngIf="!loading" >Login</span>
+        </button>
       </form>
     </div>
   </div>
