--- a/src/app/_components/nav/nav.component.html
+++ b/src/app/_components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand text-primary" href="#">Shattered Realms</a>
+    <a class="navbar-brand text-primary" [routerLink]="['/']">Shattered Realms</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -19,18 +19,18 @@
     >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" [routerLink]="['/']">Home</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
         <li class="nav-item text-center">
-          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" [routerLink]="['/login']">Login</a>
         </li>
         <li class="nav-item text-center">
-          <a class="nav-link" href="#">Register</a>
+          <a class="nav-link" [routerLink]="['/register']">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-primary text-dark" href="#">Download</a>
+          <a class="nav-link btn btn-primary text-dark" [routerLink]="['/']">Download</a>
         </li>
       </ul>
     </div>
