Refactored `About The Game` look

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -7,7 +7,7 @@ $danger: #910d2e;
 $light: #F6F7F8;
 $semi-dark: #3F3F3F;
 $dark: #282828;
-$dark-highlight: #011627;
+$dark-accent: #011627;
 
 $theme-colors: (
   "primary": $primary,
@@ -19,6 +19,6 @@ $theme-colors: (
   "light": $light,
   "semi-dark": $semi-dark,
   "dark": $dark,
-  "dark-highlight": $dark-highlight,
+  "dark-accent": $dark-accent,
 );
 
