--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,12 +17,10 @@
       <h3 class="text-uppercase fw-bold mb-4">
         ABOUT THE GAME
       </h3>
-      <p class="text-muted">
-        <span class="text-secondary">Release Date: </span> TBD
-        <span class="text-secondary">Genre: </span> MMORPG
-        <span class="text-secondary">Platform: </span> Windows, Mac, & Linux
-        <span class="text-secondary">Developer: </span> Forever Dev
-      </p>
+        <span class="badge bg-semi-dark mx-1"><span class="text-secondary">Release Date: </span> TBD</span>
+        <span class="badge bg-semi-dark mx-1"><span class="text-secondary">Genre: </span> MMORPG</span>
+        <span class="badge bg-semi-dark mx-1"><span class="text-secondary">Platform: </span> Windows, Mac, & Linux</span>
+        <span class="badge bg-semi-dark mx-1"><span class="text-secondary">Developer: </span> Forever Dev</span>
     </div>
   </div>
 </section>
