Refactored stats look

--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -12,15 +12,15 @@
     <div class="profile-stats col-md-12 col-lg-6 text-center mt-xs-4 mt-md-4 mt-lg-0 d-flex">
       <div class="row">
         <div class="stat col">
-          <h6>PLAY TIME</h6>
+          <h6 class="text-muted">PLAY TIME</h6>
           <h5 class="text-light">1204<span class="small">h</span></h5>
         </div>
         <div class="stat col">
-          <h6>CHARACTERS</h6>
+          <h6 class="text-muted">CHARACTERS</h6>
           <h5 class="text-light">8</h5>
         </div>
         <div class="stat col">
-          <h6>FRACTURED LIGHT</h6>
+          <h6 class="text-muted">FRACTURED LIGHT</h6>
           <h5 class="text-light">500<span class="small">h</span></h5>
         </div>
       </div>
