Added profile button

--- a/src/app/_components/nav/nav.component.html
+++ b/src/app/_components/nav/nav.component.html
@@ -32,6 +32,7 @@
         <li *ngIf="isUserSignedIn()" class="nav-item dropdown" mdbDropdown>
           <a mdbDropdownToggle class="nav-link dropdown-toggle"><i class="far fa-user-circle fa-lg"></i></a>
           <div mdbDropdownMenu class="dropdown-menu dropdown-menu-dark dropdown" role="menu">
+            <a class="dropdown-item" [routerLink]="['/users', this.authService.currentUserValue?.id]">Profile</a>
             <a class="dropdown-item" style="cursor: pointer" (click)="signOutUser()">Logout</a>
           </div>
         </li>
