User profile responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="min-vh-100 d-flex flex-column justify-content-between">
-  <div class="container p-0 mw-100">
+  <div class="container-fluid p-0 mw-100">
     <app-nav></app-nav>
     <app-alert></app-alert>
     <main>
       <router-outlet></router-outlet>
     </main>
   </div>
-  <div class="container p-0 mw-100 footer bg-dark text-light">
+  <div class="container-fluid p-0 mw-100 footer bg-dark text-light">
     <app-footer></app-footer>
   </div>
 </div>
