--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,6 +1,6 @@
 <section class="user-info container">
   <div class="quick-info row">
-    <div class="col-md-12 col-lg-6 d-flex">
+    <div class="col-md-12 col-lg-6 d-flex ml-1">
       <div class="profile-picture"><i class="far fa-user"></i></div>
       <div class="profile-info">
         <div class="text-muted">{{this.user.email}}</div>
@@ -9,19 +9,19 @@
         <button class="btn btn-sm btn-outline-primary">Edit Details</button>
       </div>
     </div>
-    <div class="profile-stats col-md-12 col-lg-6 text-center mt-xs-4 mt-md-4 mt-lg-0 d-flex">
-      <div class="row">
-        <div class="stat col">
+    <div class="profile-stats col-md-12 col-lg-6 text-center mt-lg-0 mt-4">
+      <div class="profile-stats-wrapper d-flex justify-content-between px-3 px-sm-5">
+        <div class="stat">
           <h6 class="text-muted">PLAY TIME</h6>
           <h5 class="text-light">1204<span class="small">h</span></h5>
         </div>
-        <div class="stat col">
+        <div class="stat">
           <h6 class="text-muted">CHARACTERS</h6>
           <h5 class="text-light">8</h5>
         </div>
-        <div class="stat col">
-          <h6 class="text-muted">FRACTURED LIGHT</h6>
-          <h5 class="text-light">500<span class="small">h</span></h5>
+        <div class="stat">
+          <h6 class="text-muted">JOINED</h6>
+          <h5 class="text-light">04/10/21</h5>
         </div>
       </div>
     </div>
