Account button now changes from dropdown to buttons with nav

--- a/src/app/_components/nav/nav.component.html
+++ b/src/app/_components/nav/nav.component.html
@@ -29,13 +29,27 @@
         <li *ngIf="!isUserSignedIn()" class="nav-item text-center">
           <a class="nav-link" [routerLink]="['/register']">Register</a>
         </li>
-        <li *ngIf="isUserSignedIn()" class="nav-item dropdown" mdbDropdown>
-          <a mdbDropdownToggle class="nav-link dropdown-toggle"><i class="far fa-user-circle fa-lg"></i></a>
-          <div mdbDropdownMenu class="dropdown-menu dropdown-menu-dark dropdown" role="menu">
-            <a class="dropdown-item" [routerLink]="['/users', this.authService.currentUserValue?.id]">Profile</a>
-            <a class="dropdown-item" style="cursor: pointer" (click)="signOutUser()">Logout</a>
+        <div *ngIf="isScreenSmall$ | async; then smallScreen else largeScreen"></div>
+        <ng-template #largeScreen>
+          <li *ngIf="isUserSignedIn()" class="nav-item dropdown" mdbDropdown>
+            <a mdbDropdownToggle class="nav-link dropdown-toggle"><i class="far fa-user-circle fa-lg"></i></a>
+            <div mdbDropdownMenu class="dropdown-menu dropdown-menu-dark dropdown" role="menu">
+              <a class="dropdown-item col-sm-12" [routerLink]="['/users', this.authService.currentUserValue?.id]">Profile</a>
+              <a class="dropdown-item col-sm-12" style="cursor: pointer" (click)="signOutUser()">Logout</a>
+            </div>
+          </li>
+        </ng-template>
+        <ng-template #smallScreen>
+          <hr class="text-light"/>
+          <div class="d-flex">
+            <li class="nav-item text-center col-6">
+              <a class="nav-link" [routerLink]="['/register']">Profile</a>
+            </li>
+            <li class="nav-item text-center col-6">
+              <a class="nav-link" [routerLink]="['/register']">Logout</a>
+            </li>
           </div>
-        </li>
+        </ng-template>
         <li class="nav-item">
           <a class="nav-link btn btn-primary text-dark" [routerLink]="['/']">Download</a>
         </li>
@@ -43,3 +57,5 @@
     </div>
   </div>
 </nav>
+
+<ng-template #elseBlock>There</ng-template>
