--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -21,7 +21,7 @@
         </div>
         <div class="stat">
           <h6 class="text-muted">JOINED</h6>
-          <h5 class="text-light">04/10/21</h5>
+          <h5 class="text-light">{{this.user.created_at | date: 'MM/dd/yyyy'}}</h5>
         </div>
       </div>
     </div>
