--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -13,11 +13,11 @@
       <div class="profile-stats-wrapper d-flex justify-content-between px-3 px-sm-5">
         <div class="stat">
           <h6 class="text-muted">PLAY TIME</h6>
-          <h5 class="text-light">1204<span class="small">h</span></h5>
+          <h5 class="text-light">0 hours</h5>
         </div>
         <div class="stat">
           <h6 class="text-muted">CHARACTERS</h6>
-          <h5 class="text-light">8</h5>
+          <h5 class="text-light">0</h5>
         </div>
         <div class="stat">
           <h6 class="text-muted">JOINED</h6>
