Fixed sign-up button

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
    <div class="col-md-6 col-sm-12 my-auto text-center hero-content">
      <h1 class="text-primary">Welcome to<br/> Shattered Realms Online</h1>
      <p class="text-light">
-       <span class="btn btn-outline-secondary">Sign Up</span> for a free account to get started playing!
+       <a [routerLink]="'/register'"><span class="btn btn-outline-secondary">Sign Up</span></a>  for a free account to get started playing!
      </p>
    </div>
  </div>
