--- a/src/app/_components/alert/alert.component.html
+++ b/src/app/_components/alert/alert.component.html
@@ -1,6 +1,14 @@
-<div class="mt-4 px-4">
-  <div role="alert" *ngFor="let alert of alerts" class="{{cssClass(alert)}}" style="position: relative">
-    <a type="button" class="close" aria-label="Close" (click)="removeAlert(alert)"><span aria-hidden="true">&times;</span></a>
-    {{alert.message}}
+<div class="container">
+  <div
+    [class]="getHTMLClasses()"
+    role="alert">
+    {{ message }}
+    <button
+      *ngIf="closeable"
+      (click)="notificationRef.close()"
+      type="button"
+      class="btn-close"
+      aria-label="Close">
+    </button>
   </div>
 </div>
