--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,6 +1,6 @@
-@import '../../../../../node_modules/mdb-angular-ui-kit/assets/scss/bootstrap/functions';
-@import '../../../../../node_modules/mdb-angular-ui-kit/assets/scss/bootstrap/variables';
-@import '../../../../../node_modules/mdb-angular-ui-kit/assets/scss/bootstrap/mixins';
+@import 'node_modules/mdb-angular-ui-kit/assets/scss/bootstrap/functions';
+@import 'node_modules/mdb-angular-ui-kit/assets/scss/bootstrap/variables';
+@import 'node_modules/mdb-angular-ui-kit/assets/scss/bootstrap/mixins';
 
 .background-blend {
   background: radial-gradient(
