--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
 <section class="container mt-4">
-  <div class="quick-info row">
+  <div class="row">
     <div class="col-md-12 col-xl-6 col-xxl-4">
       <div class="card">
         <div class="row g-0">
@@ -8,9 +8,17 @@
           </div>
           <div class="col-6">
             <div class="card-body">
-              <div class="card-text text-muted text-right">{{this.user.email}}</div>
-              <h4 class="card-text text-light mb-0">{{this.user.firstName}} {{this.user.lastName}}</h4>
-              <p class="card-text"><span class="badge bg-success">Online</span></p>
+              <div class="card-text text-muted text-right">{{this.user?.email}}</div>
+              <h4 class="card-text text-light mb-0">{{this.user?.firstName}} {{this.user?.lastName}}</h4>
+              <p class="card-text">
+                <span class="badge bg-success mx-1">Online</span>
+                <span
+                  *ngFor="let role of user.roles" class="badge mx-1 mt-1"
+                  [class]="getRoleHTMLClass(role)"
+                >
+                  {{ role.name }}
+                </span>
+              </p>
               <p class="card-text">
                 <a href="/users/1/edit">
                   <span class="btn btn-sm btn-outline-primary">Edit Details</span>
@@ -35,7 +43,7 @@
             </div>
             <div class="col-4">
               <h5 class="card-title">JOINED</h5>
-              <p class="card-text">{{this.user.createdAt | date: 'MM/dd/yyyy'}}</p>
+              <p class="card-text">{{this.user?.createdAt | date: 'MM/dd/yyyy'}}</p>
             </div>
           </div>
         </div>
