Refactored user-tables design

--- a/src/app/_components/users/users-table.component.html
+++ b/src/app/_components/users/users-table.component.html
@@ -24,7 +24,7 @@
       mdbTableSort
       #table="mdbTable"
       #sort="mdbTableSort"
-      [dataSource]="dataSource$ | async"
+      [dataSource]="dataSource"
       [sort]="sort"
       [pagination]="pagination"
       [filterFn]="filterFn"
