--- a/src/app/pages/user-edit/user-edit.component.html
+++ b/src/app/pages/user-edit/user-edit.component.html
@@ -1,5 +1,5 @@
 <section class="container mt-4">
-  <div class="row">
+  <div class="row g-4">
     <div class="col-lg-6 col-md-12">
       <div class="card text-center">
         <div class="card-header">Account Details</div>
@@ -75,7 +75,7 @@
         </form>
       </div>
     </div>
-    <div class="col-lg-6 col-md-12 mt-sm-4 mt-lg-0">
+    <div class="col-lg-6 col-md-12">
       <div class="card text-center">
         <div class="card-header">Password</div>
         <form [formGroup]="updatePasswordForm">
@@ -139,28 +139,31 @@
         </form>
       </div>
     </div>
-  </div>
-</section>
-<section *ngIf="isAdmin()" class="container">
-  <div class="row">
-    <div class="col-lg-6 col-md-12 mt-4">
-      <div class="card text-center">
-        <div class="card-header">Roles</div>
-        <div class="card-body p-0">
-          <app-roles-table
-            [loading]="false"
-            [dataSource]="userRoles | async"
-          ></app-roles-table>
+    <ng-container *ngIf="isAdmin()">
+      <div class="col-lg-6 col-md-12">
+        <div class="card text-center">
+          <div class="card-header">Roles</div>
+          <div class="card-body p-0">
+            <app-roles-table
+              [loading]="loadingUser"
+              [dataSource]="userRoles | async"
+            ></app-roles-table>
+          </div>
+          <div class="card-footer"></div>
         </div>
-        <div class="card-footer"></div>
       </div>
-    </div>
-    <div class="col-lg-6 col-md-12 mt-4">
-      <div class="card text-center">
-        <div class="card-header">Permissions</div>
-        <div class="card-body"></div>
-        <div class="card-footer"></div>
+      <div class="col-lg-6 col-md-12">
+        <div class="card text-center">
+          <div class="card-header">Additional Permissions</div>
+          <div class="card-body">
+            <app-permissions-table
+              [loading]="loadingUser"
+              [dataSource]="userPermissions | async"
+            ></app-permissions-table>
+          </div>
+          <div class="card-footer"></div>
+        </div>
       </div>
-    </div>
+    </ng-container>
   </div>
 </section>
